--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -54,6 +54,9 @@ body {
   background-color: var(--background-color);
   font-family: var(--default-font);
 }
+*{
+  
+}
 
 a {
   color: var(--accent-color);
