--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -91,6 +91,7 @@ h6 {
 .php-email-form .sent-message {
   display: none;
   color: #ffffff;
+  color: #ffffff;
   background: #059652;
   text-align: center;
   padding: 15px;
